Name:                whitespace
Version:             0.4
Synopsis:            Whitespace, an esoteric programming language.
Description:         Whitespace, an esoteric programming language.
License:             GPL
License-file:        COPYING
Author:              Edwin Brady (e.c.brady@durham.ac.uk)
Maintainer:          harold@hotelling.net
Homepage:            https://github.com/haroldl/whitespace-nd
Category:            Compilers/Interpreters
Build-Type:          Simple
Cabal-Version:       >=1.10
Data-Files:          README.md examples/calc.ws examples/count.ws examples/fact.ws examples/hanoi.ws examples/hworld.ws examples/loctest.ws examples/name.ws examples/randperm.ws docs/tutorial.html emacs/whitespace-mode.el

Library 
  exposed-modules:   Language.Whitespace.Tokens
                   , Language.Whitespace.Input
                   , Language.Whitespace.VM
  hs-source-dirs:    src
  build-depends:     array, base, random
  default-language:  Haskell2010

Executable wspace
  Main-is:           main.hs
  Build-Depends:     base, whitespace
  default-language:  Haskell2010
