Name:                whitespace
Version:             0.4
Synopsis:            Whitespace, an esoteric programming language.
Description:         Whitespace, an esoteric programming language.
License:             GPL
License-file:        COPYING
Author:              Edwin Brady (e.c.brady@durham.ac.uk)
Maintainer:          harold@hotelling.net
Homepage:            https://github.com/haroldl/whitespace-nd
Category:            Compilers/Interpreters
Build-Type:          Simple
Cabal-Version:       >=1.10
Data-Files:          README.md examples/calc.ws examples/count.ws examples/fact.ws examples/hanoi.ws examples/hworld.ws examples/loctest.ws examples/name.ws examples/randperm.ws docs/tutorial.html emacs/whitespace-mode.el

Library
  exposed-modules:   Language.Whitespace.Tokens
                   , Language.Whitespace.Binary
                   , Language.Whitespace.VM
                   , Language.Whitespace.Assembly
  hs-source-dirs:    src
  build-depends:     array, base, random, megaparsec >= 9.0.0, text
  ghc-options:       -W -Wall
  default-language:  Haskell2010

Executable wspace
  Main-is:           main.hs
  Build-Depends:     base, optparse-applicative, filepath, whitespace
  ghc-options:       -W -Wall
  default-language:  Haskell2010

Executable wsasm
  Main-is:           asm.hs
  Build-Depends:     base, optparse-applicative, filepath, whitespace
  ghc-options:       -W -Wall
  default-language:  Haskell2010

Test-Suite wsasm-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Driver.hs
  build-depends:     base
                   , tasty
                   , tasty-discover
                   , tasty-quickcheck
                   , generic-arbitrary
                   , QuickCheck
                   , whitespace
  ghc-options:       -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010
  other-modules:     BinarySpec
